<?xml version="1.0"?>
<package>
  <name>netft_rdt_driver</name>
  <version>0.0.0</version>
  <description>
     Driver for NetFT sensor that uses Raw Data Transfer (RDT) protocol.
  </description>

  <maintainer email="guillaume@todo.todo">Derek King</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>	roscpp			</build_depend>
  <run_depend>		roscpp			</run_depend>

  <build_depend>	diagnostic_updater	</build_depend>
  <run_depend>		diagnostic_updater	</run_depend>

  <build_depend>	diagnostic_msgs		</build_depend>
  <run_depend>		diagnostic_msgs		</run_depend>

  <build_depend>	geometry_msgs		</build_depend>
  <run_depend>		geometry_msgs		</run_depend>

  <build_depend>        genmsg                  </build_depend>

  <build_depend>        message_generation      </build_depend>
  <run_depend>          message_generation      </run_depend>

  <build_depend>        message_runtime         </build_depend>
  <run_depend>          message_runtime         </run_depend>


  <build_depend>        std_msgs                </build_depend>
  <run_depend>          std_msgs                </run_depend>

  <build_depend>        tf                      </build_depend>
  <run_depend>          tf                      </run_depend>


  <export>
    <cpp cflags="-I${prefix}/include" lflags="-L${prefix}/lib -lnetft_rdt_driver -Wl,-rpath,${prefix}/lib"/>
  </export>

</package>
